# iri-facility-api-python

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  VALIDATION.MD  gunicorn.config.py  local-template.env  pylintrc  pyproject.toml
.claude/skills/check/: SKILL.md  check.sh
.claude/skills/dev/: SKILL.md  dev.sh
.claude/skills/lint/: SKILL.md  lint.sh
.claude/skills/logs/: SKILL.md  logs.sh
.claude/skills/security/: SKILL.md  security.sh
.github/workflows/: api-validation.yml  docker-build.yml
app/: apilogger.py  auth.py  config.py  context.py  demo_adapter.py  facility_adapter.py  idempotency.py  main.py  middleware.py  request_context.py  state.py
app/routers/: common.py  dependencies.py  error_handlers.py  iri_meta.py  iri_router.py  loader.py
app/routers/account/: account.py  facility_adapter.py  models.py
app/routers/compute/: compute.py  facility_adapter.py  models.py
app/routers/facility/: facility.py  facility_adapter.py  models.py
app/routers/filesystem/: direct.py  facility_adapter.py  filesystem.py  models.py  ontask.py
app/routers/status/: facility_adapter.py  models.py  status.py
app/routers/storage/: facility_adapter.py  models.py  (+1 more)
app/s3df/: __init__.py  account_adapter.py  compute_adapter.py  config.py
app/types/: base.py  http.py  models.py  scalars.py  user.py
design-docs/: filesystem.md
scripts/: refresh-dex-jwks.py
test/: test_facility_project_header.py  test_filesystem.py  test_oidc_auth.py  test_proxy_prefix_urls.py  test_storage.py  test_urn_types.py
tools/: globus.py  manage_globus.py  ping.py
(+36 files in other folders)
