[project]
name = "iri-api-python"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "pyhumps>=3.8.0,<3.9.0",
    "opentelemetry-api>=1.39.1,<1.40.0",
    "opentelemetry-sdk>=1.39.1,<1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61b0",
    "opentelemetry-exporter-otlp>=1.39.1,<1.40.0"
]
[tool.ruff]
line-length = 200
exclude = [".venv", "__pycache__", "build", "dist"]
